--- a/templates/tools.html
+++ b/templates/tools.html
@@ -2,7 +2,7 @@
 {% block content %}
 
     <h2 class="header">All kitchen gadgets</h2>
-    <div class="row rm-bottom-gap valign-wrapper">
+    <div class="row rm-bottom-gap">
         {% for item in kitchen_tools %}
             <div class="col s6 m3">
                 <div class="card small responsive-size-profile hoverable">
