--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
     <header>
         <!--Large screen top navbar-->
-        <nav class="nav-extended  light-green darken-3">
+        <nav class="nav-extended  red darken-1 ">
             <div class="nav-wrapper">
                 <a href="{{ url_for('get_latest') }}" class="brand-logo">Online CookBook</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
@@ -53,7 +53,10 @@
             {% endif %}
         </ul>
     </header>
-
+    <main>
+        {% block full_width %}
+        {% endblock %}
+    </main>
     <!--Section for the messages-->
     <section>
         {% with messages = get_flashed_messages() %}
@@ -64,11 +67,10 @@
             {% endif%}
         {% endwith %}
     </section>
-
     <main class="container">
         {% block content %}
         {% endblock %}
-    </main>
+    </main> 
     <footer class="page-footer">
         {% if not session.user %}
             <div class="footer-copyright deep-orange lighten-4">
