Add recipe_details.html page and its functionality to open new page with one single recipe details

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,10 @@
             {% endif %}
         </ul>
     </header>
-    <main>
-        {% block full_width %}
+    <section>
+        {% block hero_img %}
         {% endblock %}
-    </main>
+    </section>
     <!--Section for the messages-->
     <section>
         {% with messages = get_flashed_messages() %}
