--- a/templates/item_details.html
+++ b/templates/item_details.html
@@ -30,5 +30,10 @@
                     </div>
             </div>
         </div>  
+        <div class="col s6 right-align">
+            <a href="{{ url_for('get_product_list') }}" class="btn-large waves-effect waves-light">
+                Go Back <i class="fas fa-file right"></i>
+            </a>
+        </div>
 
 {% endblock %}
