Add breadcrumbs for product list and recipes pages

--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+    {% if session.user %}
     <h2 class="header">Add New Product</h2>
 
     <div class="row card-panel">
@@ -54,6 +54,10 @@
             </div>
         </form>
     </div>
-
+    {% else %}
+    <div>
+        <strong>You need to be Log In</strong>
+    </div>
+    {% endif%}
 
 {% endblock %}
