--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+    {% if session.user %}
     <h2 class="header">Edit item</h2>
     <div class="row card-panel">
         <form class="" method="POST" action="{{ url_for('edit_item', item_id=item._id)}}">
@@ -55,5 +55,10 @@
             </div>
         </form>
     </div>
+    {% else %}
+        <div>
+            <strong>You need to Log In</strong>
+        </div>
+    {% endif %}
 
 {% endblock %}
