--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+    {% if session.user %}
     <h2 class="header">Editing Your Recipe</h2>
 
     <div class="row card-panel">
@@ -141,6 +142,10 @@
             </div>
         </form>
     </div>
-
+    {% else %}
+        <div>
+            <strong>You need to Log In</strong>
+        </div>
+    {% endif %}
 
 {% endblock %}
