--- a/templates/manage_products.html
+++ b/templates/manage_products.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+    {% if session.user %}
     <div class="row">
         <div class="col s12 m8 offset-m2">
             <div class="card-panel">
@@ -46,5 +46,10 @@
         
         {% endfor %}
     </ul>
+    {% else %}
+        <div>
+            <strong>You need to Log In</strong>
+        </div>
+    {% endif %}
 
 {% endblock %}
