--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <title>Online CookBook</title>
+    <title>CookBook</title>
 </head>
 
 <body>
@@ -19,8 +19,8 @@
     <header>
         <!--Large screen top navbar-->
         <nav class="nav-extended  red darken-1 ">
-            <div class="nav-wrapper">
-                <a href="{{ url_for('get_latest') }}" class="brand-logo">Online CookBook</a>
+            <div class="nav-wrapper container">
+                <a href="{{ url_for('get_latest') }}" class="brand-logo"><span class="bolder-text-part">Cook</span><span class="lighter-text-part ">Book</span></a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_latest') }}">Home</a></li>
